--- a/webcam-text.html
+++ b/webcam-text.html
@@ -91,7 +91,7 @@
 
     <script>
         // Change this text to whatever you want to display
-        const displayText = "I can no longer see";
+        const displayText = "I can only see upside down.";
         
         // Change typing speed (lower = faster)
         const typingSpeed = 30;
