--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
             height: 100vh;
             object-fit:fill;
             transform: rotate(180deg) scaleX(-1);
+            filter: hue-rotate(200deg);
             
             z-index: 1;
         }
