--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
             object-fit:fill;
             transform: rotate(180deg) scaleX(-1);
             filter: hue-rotate(200deg);
+            filter: saturate(600%);
             
             z-index: 1;
         }
