--- a/index.html
+++ b/index.html
@@ -30,8 +30,9 @@
             height: 100vh;
             object-fit:fill;
             transform: rotate(180deg) scaleX(-1);
-            filter: hue-rotate(200deg);
-            filter: saturate(600%);
+            filter: hue-rotate(120deg);
+            filter: saturate(800%);
+            filter: brightness(180%);
             
             z-index: 1;
         }
