--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             filter: hue-rotate(120deg);
             filter: saturate(150%);
             filter: brightness(180%);
-            
+            filter: invert(70%);
             z-index: 1;
         }
         
