--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 
     <script>
         // Change this text to whatever you want to display
-        const displayText = "I can only see upside down.";
+        const displayText = "I can only see upside down¡";
         
         // Change typing speed (lower = faster)
         const typingSpeed = 30;
