--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
             filter: saturate(150%);
             filter: brightness(180%);
             filter: invert(70%);
+            clip-path: circle(50% at left);
             z-index: 1;
         }
         
