--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         
         body {
             overflow: hidden;
-            background-color: #0a0e17;
+            background-color: #FF8A9D;
         }
         
         .container {
