--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             
             /* Change size by modifying this value */
             font-size: 4.5vw;
-            
+            font-style: oblique;
             text-align: center;
             color: white;
             padding: 20px;
