--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 
     <script>
         // Change this text to whatever you want to display
-        const displayText = "I can only see upside down¡";
+        const displayText = "I CAN ONLY SEE UPSIDE DOWN¡";
         
         // Change typing speed (lower = faster)
         const typingSpeed = 30;
